--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,5 +14,7 @@ License: cc-by-sa
 Encoding: UTF-8
 LazyData: true
 Imports:
-    stringr (>= 1.2.0)
+    stringr (>= 1.2.0),
+    dplyr,
+    tibble
 RoxygenNote: 6.0.1
