--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(bgrep)
 export(get_drake_target_size)
 export(get_drake_target_sizes)
 export(get_labels_enframed)
+export(gg_apply_labs)
 export(lookup_enframed)
 export(lpad)
 export(move)
