Add gg_integer_breaks() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(get_drake_target_size)
 export(get_drake_target_sizes)
 export(get_labels_enframed)
 export(gg_apply_labs)
+export(gg_integer_breaks)
 export(lookup_enframed)
 export(lpad)
 export(move)
