Add factor_spec() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%$%")
 export("%>%")
 export(bgrep)
 export(dhondt)
+export(factor_spec)
 export(get_drake_target_size)
 export(get_drake_target_sizes)
 export(get_labels_enframed)
