Add new function lookuper(), and refactor lookup() a bit as well

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(gg_apply_labs)
 export(gg_integer_breaks)
 export(lookup)
 export(lookup_enframed)
+export(lookuper)
 export(lpad)
 export(move)
 export(mutate_cond)
