--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,11 @@ Imports:
     stringr (>= 1.2.0),
     dplyr,
     tibble,
-    magrittr
+    magrittr,
+    drake,
+    zfit
 RoxygenNote: 7.1.1
 Suggests: 
     testthat (>= 2.1.0)
+Depends: 
+    R (>= 4.1)
