--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,8 @@ Encoding: UTF-8
 LazyData: true
 Imports:
     stringr (>= 1.2.0),
+    rlang, 
+    tidyselect,
     dplyr,
     tibble,
     magrittr,
@@ -22,6 +24,8 @@ Imports:
     zfit
 RoxygenNote: 7.1.1
 Suggests: 
-    testthat (>= 2.1.0)
+    testthat (>= 2.1.0),
+    snakecase,
+    ggplot2
 Depends: 
     R (>= 4.1)
