--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,14 @@ export(zlogit)
 export(zprint)
 export(zprobit)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,arrange)
+importFrom(dplyr,desc)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
+importFrom(dplyr,summarize)
 importFrom(dplyr,vars)
 importFrom(magrittr,"%$%")
 importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
+importFrom(tibble,tibble)
