Update version to 0.5.0, and update build configuration

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,13 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
+^LICENSE\.md$
+^README\.Rmd$
+^_pkgdown\.yml$
+^cran-comments\.md$
+^doc$
+^docs$
+^Meta$
+^pkgdown$
+^build$
+^scratch$
+^CRAN-SUBMISSION$
