--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,13 @@
 Package: zulutils
 Type: Package
 Title: Miscellaneous utility functions that the author found useful
-Version: 0.3.6
+Version: 0.5.0
 Author: Magnus Thor Torfason
 Maintainer: Magnus Thor Torfason <m@zulutime.net>
 Description: 
-    This package could just as well have been named yamisc 
-    (Yet Another MISCellaneous package).
-    It contains various miscellaneous utility functions that the 
-    author found useful at the time. You are free to use it, but
-    YMMV (Your Mileage May Vary).
+    This package contains various miscellaneous utility functions 
+    that the author found useful at the time. You are free to use 
+    it, but YMMV (Your Mileage May Vary).
 License: cc-by-sa
 Encoding: UTF-8
 LazyData: true
@@ -22,10 +20,12 @@ Imports:
     magrittr,
     drake,
     zfit
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Suggests: 
     testthat (>= 2.1.0),
     snakecase,
     ggplot2
 Depends: 
-    R (>= 4.1)
+    R (>= 4.1),
+    zmisc (>= 0.1.0),
+    zfit (>= 0.1.0)
