Update NAMESPACE and autogenerated documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export("%$%")
 export("%>%")
+export(ViewAnnotated)
+export(ViewNotated)
 export(bgrep)
 export(dhondt)
 export(factor_spec)
@@ -11,9 +13,8 @@ export(get_labels_enframed)
 export(gg_apply)
 export(gg_apply_labs)
 export(gg_integer_breaks)
-export(lookup)
+export(largest_remainder)
 export(lookup_enframed)
-export(lookuper)
 export(lpad)
 export(move)
 export(mutate_cond)
@@ -21,16 +22,10 @@ export(na.replace)
 export(na_if_in)
 export(na_replace)
 export(noop)
+export(notate)
 export(rename_enframed)
 export(rpad)
-export(zample)
-export(zeq)
-export(zglm)
-export(zingle)
-export(zlm)
-export(zlogit)
-export(zprint)
-export(zprobit)
+export(tibble)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
 importFrom(dplyr,desc)
