--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,5 +2,8 @@ pandoc: 2.17.1.1
 pkgdown: 2.0.2
 pkgdown_sha: ~
 articles: {}
-last_built: 2022-02-22T16:38Z
+last_built: 2022-02-22T16:47Z
+urls:
+  reference: https://torfason.github.io/zulutils/reference
+  article: https://torfason.github.io/zulutils/articles
 
