Update generated files for sample_string()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(noop)
 export(notate)
 export(rename_enframed)
 export(rpad)
+export(sample_strings)
 export(tibble)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
