--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,9 @@ export(ViewAnnotated)
 export(ViewNotated)
 export(bgrep)
 export(catty)
+export(cb_apply_col_spec)
+export(cb_as_col_spec_factors)
 export(dhondt)
-export(factor_spec)
 export(get_drake_target_size)
 export(get_drake_target_sizes)
 export(get_labels_enframed)
@@ -29,6 +30,8 @@ export(rename_enframed)
 export(rpad)
 export(sample_strings)
 export(tibble)
+import(zfit)
+import(zmisc)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
 importFrom(dplyr,desc)
@@ -39,5 +42,8 @@ importFrom(dplyr,summarize)
 importFrom(dplyr,vars)
 importFrom(magrittr,"%$%")
 importFrom(magrittr,"%>%")
+importFrom(purrr,imap)
+importFrom(readr,parse_factor)
 importFrom(rlang,.data)
 importFrom(tibble,tibble)
+importFrom(zmisc,zeq)
