--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,9 +37,11 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,desc)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_all)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
 importFrom(dplyr,vars)
+importFrom(labelled,copy_labels)
 importFrom(magrittr,"%$%")
 importFrom(magrittr,"%>%")
 importFrom(purrr,imap)
