Add type_convert_with_labels() function + fix sd() autogen files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,7 +29,9 @@ export(notate)
 export(rename_enframed)
 export(rpad)
 export(sample_strings)
+export(se)
 export(tibble)
+export(type_convert_with_labels)
 import(zfit)
 import(zmisc)
 importFrom(dplyr,"%>%")
@@ -47,5 +49,7 @@ importFrom(magrittr,"%>%")
 importFrom(purrr,imap)
 importFrom(readr,parse_factor)
 importFrom(rlang,.data)
+importFrom(stats,na.omit)
+importFrom(stats,sd)
 importFrom(tibble,tibble)
 importFrom(zmisc,zeq)
