Add yencode() and ydecode() functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,10 @@ export(sample_strings)
 export(se)
 export(tibble)
 export(type_convert_with_labels)
+export(ydecode)
+export(ydecoder)
+export(yencode)
+export(yencoder)
 import(zfit)
 import(zmisc)
 importFrom(dplyr,"%>%")
