Add identity_ellipsis() and deprecate noop()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(get_labels_enframed)
 export(gg_apply)
 export(gg_apply_labs)
 export(gg_integer_breaks)
+export(identity_ellipsis)
 export(lappend)
 export(largest_remainder)
 export(lookup_enframed)
