--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(na_if_in)
 export(na_replace)
 export(noop)
 export(notate)
+export(nth_prime)
 export(rename_enframed)
 export(rpad)
 export(sample_strings)
