Add strh() function (h stands for head)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(rename_enframed)
 export(rpad)
 export(sample_strings)
 export(se)
+export(strh)
 export(tibble)
 export(type_convert_with_labels)
 export(ydecode)
