Add asciify() function, along with docs, tests and data generation code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export("%$%")
 export("%>%")
 export(ViewAnnotated)
 export(ViewNotated)
+export(asciify)
 export(bgrep)
 export(catty)
 export(cb_apply_col_spec)
